--- a/comment-server/package.json
+++ b/comment-server/package.json
@@ -7,6 +7,7 @@
     "egg": "^2.2.1",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.5.0",
+    "egg-socket.io": "^4.0.7",
     "egg-validate": "^1.0.0"
   },
   "devDependencies": {
