--- a/comment-admin/package.json
+++ b/comment-admin/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.3.3",
+    "node-sass": "^4.8.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^2.1.1-b"
