--- a/comment-server/package.json
+++ b/comment-server/package.json
@@ -25,7 +25,7 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "egg-scripts start --sticky",
+    "start": "egg-scripts start --daemon --title=egg-server-comment-server --sticky",
     "stop": "egg-scripts stop --title=egg-server-comment-server",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
